--- a/src/app/components/modals/oil/create-oil-modal/create-oil-modal.component.html
+++ b/src/app/components/modals/oil/create-oil-modal/create-oil-modal.component.html
@@ -25,10 +25,12 @@
             <div class="col-6">
                 <div class="m-2">
                     <label for="liquidVolume" class="form-label">Liquid Volume</label>
-                    <input type="number" id="liquidVolume" name="liquidVolume" class="form-control" min="30" max="100" required [(ngModel)]="createdOilModel.liquidVolume" #liquidVolume="ngModel">
+                    <input type="number" id="liquidVolume" name="liquidVolume" class="form-control" (keyup)="liquidVolumeInput($event)" min="30" max="100" required [(ngModel)]="createdOilModel.liquidVolume" #liquidVolume="ngModel">
                     <p *ngIf="liquidVolume.invalid && (liquidVolume.dirty || liquidVolume.touched) && liquidVolume.errors?.['required']">Liquid Volum is required</p>
                     <p *ngIf="liquidVolume.invalid && (liquidVolume.dirty || liquidVolume.touched) && liquidVolume.errors?.['min']">Liquid Volum must be more then 30 ml</p>
                     <p *ngIf="liquidVolume.invalid && (liquidVolume.dirty || liquidVolume.touched) && liquidVolume.errors?.['max']">Liquid Volum must be less then 100 ml</p>
+                    <p *ngIf="liquidVolumeIsDecimalNumberError.length">{{ liquidVolumeIsDecimalNumberError }}</p>
+
                 </div>
             </div>
             <div class="col-6">
@@ -43,19 +45,21 @@
             <div class="col-6">
                 <div class="m-2">
                     <label for="quantity" class="form-label">Quantity</label>
-                    <input type="number" id="quantity" name="quantity" class="form-control" min="1" max="500" required [(ngModel)]="createdOilModel.unitQuantity" #unitQuantity="ngModel">
+                    <input type="number" id="quantity" name="quantity" class="form-control" (keyup)="quantityInput($event)" min="1" max="500" required [(ngModel)]="createdOilModel.unitQuantity" #unitQuantity="ngModel">
                     <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['required']">Quantity is required</p>
                     <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['min']">Quantity must be more then 0 units</p>
                     <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['max']">Quantity must be less then 500 units</p>
+                    <p *ngIf="quantityIsDecimalNumberError.length">{{ quantityIsDecimalNumberError }}</p>
                 </div>
             </div>
             <div class="col-6">
                 <div class="m-2">
                     <label for="price" class="form-label">Price</label>
-                    <input type="number" id="price" name="price" class="form-control" min="1" max="1000" required [(ngModel)]="createdOilModel.unitPrice" #unitPrice="ngModel">
+                    <input type="number" id="price" name="price" class="form-control" (keyup)="priceInput($event)" min="1" max="1000" required [(ngModel)]="createdOilModel.unitPrice" #unitPrice="ngModel">
                     <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['required']">Price is required</p>
                     <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['min']">Price must be more then 0 $</p>
                     <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['max']">Price must be lest then 1000 $</p>
+                    <p *ngIf="priceIsDecimalNumberError.length">{{ priceIsDecimalNumberError }}</p>
                 </div>
             </div>
         </div>
@@ -78,13 +82,15 @@
                         </div>
                     </div>
                 </div>
-                <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="isImageChosen">Remove</a>
+                <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="isImageChosen">Remove image</a>
             </div>
         </div>
         <div class="btn-container modal-footer">
             <button class="btn btn-secondary m-2" (click)="closeMe()">Close</button>
-            <button class="btn btn-danger m-2" 
-            [disabled]="brand.errors || scent.errors || liquidVolume.errors || unitPrice.errors || unitQuantity.errors || !isImageChosen" (click)="confirm()">Confirm</button>
+            <button class="btn btn-primary m-2" 
+                [disabled]="brand.errors || scent.errors || liquidVolume.errors || unitPrice.errors 
+                    || unitQuantity.errors || !isImageChosen || liquidVolumeIsDecimalNumberError.length || 
+                    quantityIsDecimalNumberError.length || priceIsDecimalNumberError.length " (click)="confirm()">Confirm</button>
         </div>
     </div>
   </div>
