--- a/src/app/components/modals/oil/edit-oil-modal/edit-oil-modal.component.html
+++ b/src/app/components/modals/oil/edit-oil-modal/edit-oil-modal.component.html
@@ -67,12 +67,12 @@
                         </div>
                     </div> 
                 </div>
-                <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="showImagePanel">Remove</a>
+                <a class="btn btn-outline-danger" (click)="removeImage()" *ngIf="showImagePanel">Remove image</a>
             </div>
         </div>
         <div class="btn-container modal-footer">
             <button class="btn btn-secondary m-2" (click)="closeMe()">Close</button>
-            <button class="btn btn-danger" (click)="confirm(brand.value, scent.value, liquid.value, quantity.value, price.value, description.value)">Confirm</button>
+            <button class="btn btn-primary m-2" (click)="confirm(brand.value, scent.value, liquid.value, quantity.value, price.value, description.value)">Confirm</button>
         </div>
     </div>
   </div>
