--- a/src/app/components/modals/soap/create-soap-modal/create-soap-modal.component.html
+++ b/src/app/components/modals/soap/create-soap-modal/create-soap-modal.component.html
@@ -24,11 +24,11 @@
         <div class="col-6">
           <div class="m-3">
             <label for="quantity" class="form-label">Quantity</label>
-            <input type="number" id="quantity" name="quantity" class="form-control" (keyup)="onQuantityInput($event)" min="1" max="500" required [(ngModel)]="createdSoapModel.unitQuantity" #unitQuantity="ngModel">
+            <input type="number" id="quantity" name="quantity" class="form-control" (keyup)="quantityInput($event)" min="1" max="500" required [(ngModel)]="createdSoapModel.unitQuantity" #unitQuantity="ngModel">
             <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['required']">Quantity is required</p>
             <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['min']">Quantity must be more then 0 units</p>
             <p *ngIf="unitQuantity.invalid && (unitQuantity.dirty || unitQuantity.touched) && unitQuantity.errors?.['max']">Quantity must be less then 500 units</p>
-            <p *ngIf="quantityError.length">{{ quantityError }}</p>
+            <p *ngIf="quantityIsDecimalNumberError.length">{{ quantityIsDecimalNumberError }}</p>
 
           </div>
         </div>
@@ -64,11 +64,11 @@
         <div class="col-6">
           <div class="m-3">
             <label for="price" class="form-label">Price</label>
-            <input type="number" id="price" name="price" class="form-control" min="1" max="1000" (keyup)="onPriceInput($event)" required [(ngModel)]="createdSoapModel.unitPrice" #unitPrice="ngModel">
+            <input type="number" id="price" name="price" class="form-control" min="1" max="1000" (keyup)="priceInput($event)" required [(ngModel)]="createdSoapModel.unitPrice" #unitPrice="ngModel">
             <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['required']">Price is required</p>
             <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['min']">Price must be more then 0 $</p>
             <p *ngIf="unitPrice.invalid && (unitPrice.dirty || unitPrice.touched) && unitPrice.errors?.['max']">Price must be lest then 1000 $</p>
-            <p *ngIf="priceError.length">{{ priceError }}</p>
+            <p *ngIf="priceIsDecimalNumberError.length">{{ priceIsDecimalNumberError }}</p>
           </div>
         </div>
       </div>
@@ -76,7 +76,9 @@
       <div class="btn-container modal-footer">
         <button class="btn btn-secondary" (click)="closeMe()">Close</button>
         <button class="btn btn-primary" 
-          [disabled]="brand.errors || edition.errors || unitPrice.errors || unitQuantity.errors || !isImageChosen" (click)="confirm()">Confirm</button>
+          [disabled]="brand.errors || edition.errors || 
+          unitPrice.errors || unitQuantity.errors || !isImageChosen 
+          || priceIsDecimalNumberError.length || quantityIsDecimalNumberError.length" (click)="confirm()">Confirm</button>
       </div>
     </div>
   </div>
