better register and login exp

--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -44,7 +44,7 @@
       </div>
     
     
-      <button style="margin-left: 8px;" class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
+      <button style="margin-left: 8px;" class="btn btn-primary btn-lg" type="submit" [disabled]="!form.valid">Submit</button>
     </form>
   </div>
   <div class="col-lg-6">
