--- a/src/app/pages/soaps/user-soaps/user-soaps.component.html
+++ b/src/app/pages/soaps/user-soaps/user-soaps.component.html
@@ -17,6 +17,6 @@
         </div>
     </div> 
     <div *ngIf="loadProducts" style="text-align: center;">
-      <button class="btn btn-primary" (click)="loadMoreProducts()"><i class="bi bi-three-dots"></i></button>
+      <button class="btn btn-primary" (click)="loadMoreProducts()">See more</button>
     </div>
 </div>
