--- a/src/app/components/modals/oil/create-oil-modal/create-oil-modal.component.css
+++ b/src/app/components/modals/oil/create-oil-modal/create-oil-modal.component.css
@@ -49,9 +49,10 @@ img {
 h3 {
     text-align: left; 
     text-decoration: underline;
+    margin-left: 12px;
 }
 
 #data-image-input {
-    width: 98%;
+    width: 96%;
 }
 
