--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,25 +1,30 @@
 
-<div class="row">
+<div class="row" style="margin: 100px 0 100px 0;">
     <div class="col-6 col-md-6 col-lg-6 col-xl-6 col-sm-6">
         <img src="https://app.imgforce.com/images/user/jyC_1611618012_soap-2.jpg" style="width: 100%; height: 400px;" >
     </div>
-    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px; margin-top: 100px; padding: 50px;">
-        <p>Exclusively Handmade Natural Skin Care Soap Bar for dry skin. Beautiful handcrafted natural skin care soap bar from Organic Goat milk, extra virgin organic Coconut, organic Palm and extra virgin Olive oils</p>
+    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="margin-top: 100px;" >
+        <p>Lavender and Clove have long been said to clear your mind and provide relaxing benefits to your body. We set out to create a Soap that channeled these properties. This Soap offers a wonderful glide and creamy lather.  A healthy wash from head to toe that's gentle enough for your face while also durable and nourishing enough for your entire body. A wonderful scent to help you relax at any point of your day.</p>
+        <p>Every single bar of soap we make has a different blend and ratio of oils in it. If you like handcrafted soap, you'll appreciate these products. They're all made by artisan-master soap makers to be pure, simple, and downright good.</p>
+
     </div>
 </div>
-<div class="row">
-    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px; margin-top: 100px; padding: 50px;">
-        <p>Handmade with 100% natural oils, this beard oil absorbs quickly and gives your beard a smooth, soft, subtle shine. Great for conditioning the skin underneath your beard. Promotes hair growth by helping you maintain a healthy beard. Timber - Mild Scent of Cedar & Fir NeedleMB BEARD OIL TIMBER</p>
+<div class="row" style="margin-bottom: 100px;">
+    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="margin-top: 100px;">
+        <p>Just like all of our other Pure options, this oil has the same nourishing properties as our scented products, but without any essential oils added for scent. Our Pure blend has seven premium oils that condition coarse hairs, promote beard and skin health, all while supplying your beard and face with vitamins and antioxidants that nourish and relieve any irritation caused by new growth. All the healthy benefits just without the scent. For the no-frills beard.</p>
+        <p>Our Pure Oil is almost scentless with only the ingredients giving off their natural light unnoticeable aromas.</p>
     </div>
     <div class="col-6 col-md-6 col-lg-6 col-xl-6 col-sm-6">
         <img src="https://app.imgforce.com/images/user/XHI_1611618063_oil-1.jpg" style="width: 100%; height: 400px;" >
     </div>
 </div>
-<div class="row">
+<div class="row" style="margin-bottom: 100px;">
     <div class="col-6 col-md-6 col-lg-6 col-xl-6 col-sm-6">
         <img src="https://app.imgforce.com/images/user/DEZ_1673038473_Screenshot_2.png" style="width: 100%; height: 400px;" >
     </div>
-    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="width: 48%; height: 400px; margin-top: 100px; padding: 50px;">
-        <p>The natural, organic ingredients get deep into the hair and nourishes it from inside and out! It works on long and short beards to condition & soften your hair, improve strength & shine.  Grizzly Adam Beard Balm is the top gentleman’s leave-in beard conditioner and made in the UK. Keeps the straggler hairs at bay & allows you to form a full, beastly beard.  Relieves dry skin & helps moisturize to stop the itch of new hair growth in its tracks</p>
+    <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6" style="margin-top: 60px;" >
+        <p>Our flagship Beard Balm, but now more balm for your buy! Our Classic Beard Balm is your best choice for conditioning, strengthening, and promoting healthy beard growth. It gives your beard a healthy shine while filling it with a natural, woodsy scent. Using only the finest natural ingredients available, we've crafted a proprietary blend of organic ingredients to create the most reliable choice for maintaining a healthy and happy beard.</p>
+        <p>This classic scent has a mild sweet anise(licorice) overtone with a timeless splash of floral and spice undertones that like with all of our products will quickly dissipate and not overpower</p>
+
     </div>
 </div>
